--- a/MominXuProjectManagement/src/mominxuprojectmanagement/StudyNotes.form
+++ b/MominXuProjectManagement/src/mominxuprojectmanagement/StudyNotes.form
@@ -132,11 +132,14 @@
           <Font name="Tahoma" size="14" style="0"/>
         </Property>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="4">
+          <StringArray count="7">
             <StringItem index="0" value="Systems"/>
             <StringItem index="1" value="Measuring Success"/>
             <StringItem index="2" value="Intro to the SDLC"/>
             <StringItem index="3" value="Waterfall Model"/>
+            <StringItem index="4" value="Gantt Chart"/>
+            <StringItem index="5" value="Unified Modeling Language (UML)"/>
+            <StringItem index="6" value="Other Helpful Info"/>
           </StringArray>
         </Property>
         <Property name="toolTipText" type="java.lang.String" value=""/>
